# celery_praq

./: Makefile  README.md  pyproject.toml
celery_consumer/: Dockerfile  app.py
celery_producer/: Dockerfile  app.py
docker/: docker-compose.yml
