[tool.poetry]
name = "celery-praq"
version = "0.0.1"
description = ""
authors = ["jyablonski9 <jyablonski9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
celery = {extras = ["redis"], version = "^5.4.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
